--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -52,6 +52,10 @@
     <Compile Include="Migrations\201807241918272_InitialMigration.Designer.cs">
       <DependentUpon>201807241918272_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807251731362_AddBasket.cs" />
+    <Compile Include="Migrations\201807251731362_AddBasket.Designer.cs">
+      <DependentUpon>201807251731362_AddBasket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepo.cs" />
@@ -69,6 +73,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201807241918272_InitialMigration.resx">
       <DependentUpon>201807241918272_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807251731362_AddBasket.resx">
+      <DependentUpon>201807251731362_AddBasket.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
